--- a/simulations.html
+++ b/simulations.html
@@ -22,16 +22,23 @@
     <div class="content-section"><div class="thin-paragraph">
 	    <h2>Space Simulations Research</h2>
 	    <p>In grad school I researched small galaxies using big computers!</p>
+      <p>This page has several animated plots I made using simulation data. Citations for original papers at the bottom. You can find detailed explanations and many more non-animated data visualizations in those.</p>
     </div></div>
 
     <div class="content-section">
       <h2>FIRE (Feedback In Realistic Environments) [1,2]</h2>
-      <h3>Fly-by's cause quenching of star formation in satellite galaxies</h3>
+      <h3>Fly-by's and supernovae cause quenching of star formation in satellite galaxies</h3>
     </div>
     <center>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/-S4h6DmHr4g?si=8hOrFmbXL7veyuLD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
       <iframe width="560" height="315" src="https://www.youtube.com/embed/HWkvhXmWcoo?si=lesGJnbv17V7S-tQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/X464UqPx1dI?si=KJY7iTz7q8y1zFOk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/hiEzHcv6N7k?si=9kReaRPg9LYvS3s1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/As2KD_CAEO4?si=bZQsw_qnB8TY7zcM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </center>
 
     <div class="content-section">
@@ -43,40 +50,50 @@
     </center>
 
     <div class="content-section content-center">
-      <h2>SMUGGLE (Stars and MUtiphase Gas in GaLaxiEs) [3]</h3>
-
-      <h3>Fiducial (standard) SMUGGLE Model:</h3>
-      <p>Projection</p>
-      <p>Radial velocity distribution of gas</p>
+      <h2>SMUGGLE (Stars and MUtiphase Gas in GaLaxiEs) [3]</h2>
+      <h3>Projections of the evolution of an idealized dwarf galaxy run with different star formation models:</h3>
     </div>
-
+    
     <center>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/8pUTio76A3Q?si=-NUDq4eBB8BCqs3C" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/q0bTOKTsnQo?si=ZEX2XdD2zA5Yqm-u" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/VjmEqsNKX1U?si=cx_9gADfsUi2OP6o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/eWIjRXRnseE?si=koSspJea9FMr5A9F" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/DJZq2El4PJ0?si=_OUbN5_N2uKNd20c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/lxGDHKX8SIQ?si=HiiqJ2bObUj34A_9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/TtCYiERXDSE?si=4GfEP7QPulYONyJy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </center>
 
     <div class="content-section content-center">
-      <h3>High star formation efficiency in the SMUGGLE Model:</h3>
-      <p>Projection</p>
-      <p>Radial velocity distribution of gas</p>
+      <h3>Radial Velocity Distribution of Stars</h3>
     </div>
 
     <center>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/CCNGrh3jqkE?si=kBjkr8L08hG1VYtm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/lZlbO66B1ik?si=ISn-wdcWJ227Y2jL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/vJ3ohXnGbmM?si=74s29_zJ7yBuMAHq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/LSH-iqAVdLo?si=S1DYj2U2PdH6IzcU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </center>
 
     <div class="content-section content-center">
-      <h3>The same idealized dwarf galaxy simulated with the Illustris Model:</h3>
-      <p>Projection</p>
+      <h3>Radial Velocity Distribution of Gas</h3>
     </div>
 
     <center>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/_Qj99WMiT7g?si=L41G2ECRNLD3xv9g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/-I2R0vrFmIg?si=aXrnhmV9CIayETqr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/aFQBAP3qEIA?si=3yeVS3yHguD-cI4J" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </center>
+
+    <div class="content-section content-center">
+      <h3>Radial Velocity Distribution of Dark Matter</h3>
+    </div>
+
+    <center>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/_taOC9fqZJI?si=skpDX3l-FCpO5RVi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </center>
+
 
     <div class="content-section">
       <div class="thin-paragraph">
