dark bg for gallery & wide thumbnails

--- a/art.html
+++ b/art.html
@@ -32,10 +32,10 @@
         </div>
     </div>
 
-    <!-- <div class="content-section-full"> -->
+    <div class="content-section-wide-dark">
         <div class="gallery">
         </div>
-    <!-- </div> -->
+    </div>
 
     <!-- Modal for full-size image view -->
     <div id="modal" class="modal">
