--- a/photos.html
+++ b/photos.html
@@ -25,9 +25,11 @@
         </div>
     </div>
 
-    <div class="gallery">
+    <div class="content-section-wide-dark">
+      <div class="gallery">
+      </div>
     </div>
-
+    
     <!-- Modal for full-size image view -->
     <div id="modal" class="modal">
         <span class="close">&times;</span>
