--- a/coolstuff.html
+++ b/coolstuff.html
@@ -22,13 +22,11 @@
     <div class="content-section">
       <div class="thin-paragraph">
         <h2>Links To Stuff I Like</h2>
-        <h3>Old School Web Stuff</h3>
+        <h3>My Friends Do Cool Stuff!</h3>
         <p>
-          No to web3: <a href="https://yesterweb.org/no-to-web3/">https://yesterweb.org/no-to-web3/</a>
+          Scott Coffin's MicroPlastics Research: <a href="https://scottcoff.in/">https://scottcoff.in/</a>
           <br>
-          Buttons from: <a href="https://gifcities.org/">https://gifcities.org/</a>
-          <br>
-          Backgrounds from: <a href="https://textures.neocities.org/">https://textures.neocities.org/</a>
+          William Kennedy's Freaky Lamps: <a href="https://freakylamps.com/">https://freakylamps.com/</a>
         </p>
         <h3>Research</h3>
         <p>
@@ -39,6 +37,14 @@
           <a href="https://puredata.info/">https://puredata.info/</a>
           <a href="https://supercollider.github.io/">https://supercollider.github.io/</a>
           <a href="https://www.ircamlab.com/">https://www.ircamlab.com/</a>
+        </p>
+        <h3>Old School Web Stuff</h3>
+        <p>
+          No to web3: <a href="https://yesterweb.org/no-to-web3/">https://yesterweb.org/no-to-web3/</a>
+          <br>
+          Buttons from: <a href="https://gifcities.org/">https://gifcities.org/</a>
+          <br>
+          Backgrounds from: <a href="https://textures.neocities.org/">https://textures.neocities.org/</a>
         </p>
 
       </div>
