--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 		      </div>
 
 		      <div class="content-center">
-    				<div class="headingText">CV</div>
-    				<a href="assets/documents/JahnCV2024.pdf"><div class="randomColorButton" data-hover-text="CV">
+    				<div class="headingText">View My CV</div>
+    				<a href="assets/documents/JahnCV2024.pdf"><div class="randomColorButton" data-hover-text="View My CV">
 	        	<img src="assets/images/buttons/book.gif" width="180px" alt="CV"></div></a>
 		      </div>
 
@@ -72,19 +72,16 @@
 		      </div>
 
 		      <div class="content-center">
-    				<h3></h3>
     				<a href="coolstuff.html"><div class="randomColorButton" >
 	        		<img src="assets/images/buttons/coollink.gif" width="210px"></div></a>
 		      </div>
 
 		      <div class="content-center">
-    				<h3></h3>
     				<a href="scicomm.html"><div class="randomColorButton" >
 	        	Science Communication</div></a>
 		      </div>
 
 		      <div class="content-center">
-    				<h3></h3>
     				<a href="dei.html"><div class="randomColorButton">
 	        	Diversity Equity and Inclusivity </div></a>
 		      </div>
