updated footer and other small things

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gelatinous Astronaut</title>
     <link rel="stylesheet" href="style.css">
-    <script src="assets/scripts/scripts.js" defer></script>
+    <script src="assets/scripts/randombg.js" defer></script>
+    <script src="assets/scripts/hover.js" defer></script>
 </head>
 
 <body>
 
   <div id="main">
-  	<script src="assets/scripts/hover.js" defer></script>
   	<br>
   	<div class="content-section-wide content-center">
 	  	<a href="index.html"><img src="assets/images/buttons/gelatinous.gif" class="header-image"></a>
@@ -24,67 +24,85 @@
     <div class="content-section-wide content-center">
     	<br>
     	<div class="button-grid">
-    			<div class="content-center">
-	    			<a href="about.html"><div class="randomColorButton" >
-		        	<img src="assets/images/buttons/about.gif" width="180px">
-		        </div></a>
-		      </div>
+  			<a href="about.html">
+  				<div class="content-center randomColorButton" >
+        		<img src="assets/images/buttons/about.gif" width="180px">
+	        </div>
+	      </a>
 
-		      <div class="content-center">
-    				<a href="why.html"><div class="randomColorButton" >
-	          <img src="assets/images/buttons/why.gif" width="180px"></div></a>
-		      </div>
+				<a href="why.html">
+					<div class="content-center randomColorButton" >
+						<img src="assets/images/buttons/why.gif" width="180px">
+					</div>
+				</a>
 
-		      <div class="content-center">
-    				<div class="headingText">View My CV</div>
-    				<a href="assets/documents/JahnCV2024.pdf"><div class="randomColorButton" data-hover-text="View My CV">
-	        	<img src="assets/images/buttons/book.gif" width="180px" alt="CV"></div></a>
-		      </div>
+				<a href="assets/documents/JahnCV2024.pdf">
+					<div class="content-center randomColorButton">
+						<img src="assets/images/buttons/CV.png" width="180px" alt="CV">
+					</div>
+				</a>
 
-		      <div class="content-center">
-    				<div class="headingText">Space Simulations Research</div>
-    				<a href="simulations.html"><div class="randomColorButton" data-hover-text="Space Simulations Research">
-	        	<img src="assets/images/buttons/galaxy.gif" width="180px"></div></a>
-		      </div>
+				<div class="content-center">
+	      	<div class="headingText">Space Simulations Research</div>
+					<a href="simulations.html">
+						<div class="randomColorButton" data-hover-text="Space Simulations Research">
+							<img src="assets/images/buttons/galaxy.gif" width="160px">
+						</div></a>
+	      </div>
 
-		      <div class="content-center">
-		      	<div class="headingText">Teaching</div>
-    				<a href="teach.html"><div class="randomColorButton" data-hover-text="Teaching">
-	        	<img src="assets/images/buttons/teacher.gif" width="160px"></div></a>
-		      </div>
+	      <div class="content-center">
+	      	<div class="headingText">Teaching</div>
+  				<a href="teach.html">
+  					<div class="randomColorButton" data-hover-text="Teaching">
+        			<img src="assets/images/buttons/teacher.gif" width="160px">
+        		</div></a>
+	      </div>
 
-		      <div class="content-center">
-    				<div class="headingText">Digital Art</div>
-    				<a href="art.html"><div class="randomColorButton"data-hover-text="Digital Art" >
-	            	<img src="assets/images/buttons/colorspin.gif" width="150px"></div></a>
-		      </div>
+	      <div class="content-center">
+	      	<div class="headingText">Salon</div>
+  				<a href="salon.html">
+  					<div class="randomColorButton" data-hover-text="Salon">
+        			<img src="assets/images/buttons/book.gif" width="160px">
+        		</div></a>
+	      </div>
 
-		      <div class="content-center">
-    				<div class="headingText">Music</div>
-    				<a href="music.html"><div class="randomColorButton" data-hover-text="Music">
-	            <img src="assets/images/buttons/alienmusic.gif" width="210px"></div></a>
-		      </div>
+	      <div class="content-center">
+  				<div class="headingText">Digital Art</div>
+  				<a href="art.html">
+  					<div class="randomColorButton"data-hover-text="Digital Art" >
+            	<img src="assets/images/buttons/colorspin.gif" width="150px">
+            </div></a>
+	      </div>
 
-		      <div class="content-center">
-    				<div class="headingText">Film Photography</div>
-    				<a href="photos.html"><div class="randomColorButton" data-hover-text="Film Photography">
-	            <img src="assets/images/buttons/camera.gif" width="210px"></div></a>
-		      </div>
+	      <div class="content-center">
+  				<div class="headingText">Music</div>
+  				<a href="music.html">
+  					<div class="randomColorButton" data-hover-text="Music">
+            	<img src="assets/images/buttons/alienmusic.gif" width="210px">
+          	</div></a>
+	      </div>
 
-		      <div class="content-center">
-    				<a href="coolstuff.html"><div class="randomColorButton" >
-	        		<img src="assets/images/buttons/coollink.gif" width="210px"></div></a>
-		      </div>
+	      <div class="content-center">
+  				<div class="headingText">Film Photography</div>
+  				<a href="photos.html">
+  					<div class="randomColorButton" data-hover-text="Film Photography">
+            	<img src="assets/images/buttons/camera.gif" width="210px">
+            </div></a>
+	      </div>
 
-		      <div class="content-center">
-    				<a href="scicomm.html"><div class="randomColorButton" >
-	        	Science Communication</div></a>
-		      </div>
+				<a href="coolstuff.html">
+					<div class="content-center randomColorButton" >
+      			<img src="assets/images/buttons/coollink.gif" width="210px">
+      		</div>
+      	</a>
 
-		      <div class="content-center">
-    				<a href="dei.html"><div class="randomColorButton">
-	        	Diversity Equity and Inclusivity </div></a>
-		      </div>
+      	<div class="content-center">
+  				<div class="headingText">Science Communication</div>
+  				<a href="scicomm.html">
+  					<div class="randomColorButton" data-hover-text="Science Communication">
+            	<img src="assets/images/buttons/atom.gif" width="120px">
+            </div></a>
+	      </div>
 					
       </div>
       <br>
@@ -100,6 +118,9 @@
 	    <a href="https://www.instagram.com/xthnj.wav/"><div class="randomColorButton">
 	        <img src="assets/images/buttons/instagram-shiny.gif" width="160px">
 	    </div></a>
+	    <a href="https://github.com/gelatinous-astronaut/"><div class="randomColorButton">
+          <img src="assets/images/buttons/github.gif" width="100px">
+      </div></a>
   	</div>	  	
   </div>
 
