--- a/simulations.html
+++ b/simulations.html
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gelatinous Astronaut</title>
     <link rel="stylesheet" href="style.css">
-    <script src="assets/scripts/scripts.js" defer></script>
+    <script src="assets/scripts/randombg.js" defer></script>
+    <script src="assets/scripts/hover.js" defer></script>
 </head>
 
 <body>
@@ -112,9 +113,17 @@
   </div>
 
   <div class="content-section">
-    <a href="mailto:ejahn@arizona.edu"><div class="randomColorButton">
-        <img src="assets/images/buttons/E-MAIL-ME.gif" width="160px">
-    </div></a>
+    <div class="button-grid-footer">
+      <a href="mailto:gelatinous.astronaut@gmail.com"><div class="randomColorButton">
+          <img src="assets/images/buttons/E-MAIL-ME.gif" width="160px">
+      </div></a>
+      <a href="https://www.instagram.com/xthnj.wav/"><div class="randomColorButton">
+          <img src="assets/images/buttons/instagram-shiny.gif" width="160px">
+      </div></a>
+      <a href="https://github.com/gelatinous-astronaut/"><div class="randomColorButton">
+          <img src="assets/images/buttons/github.gif" width="100px">
+      </div></a>
+    </div>      
   </div>
 
   <footer id="footer">
